<resources>
    <string name="app_name">NewsApp</string>
    <string name="menu_news">news</string>
    <string name="menu_categories">categories</string>
    <string name="menu_mine">mine</string>
    <string name="error_web">Failed to crawl news!</string>
    <string name="string_source">"source: "</string>
    <string name="string_category">"category: "</string>
    <string name="string_none">"none"</string>
    <string name="string_search">"search"</string>
    <string name="string_keyword">"keyword: "</string>
    <string name="string_date_from">"date from: "</string>
    <string name="string_to">"to:"</string>
    <string name="button_search">"search"</string>
    <string name="button_clear">"clear"</string>
    <string name="string_edit_categories">Edit categories</string>
    <string name="string_ok">OK</string>
    <string name="string_personal_center">Personal Center</string>
    <string name="string_star">My Favourites</string>
    <string name="string_history">History</string>
    <string name="string_delete_record">Delete Records</string>
    <string name="string_cancel">Cancel</string>
    <string name="info_star">Added to favourites.</string>
    <string name="info_unstar">Deleted from favourites</string>
    <string name="abstract_loading">Loading intelligent abstract…</string>
    <string name="abstract_prefix">GLM intelligent abstract:\n</string>
    <string name="abstract_failed">Failed to generate GLM abstract.</string>
</resources>