<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_search_24"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/string_keyword"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_keyword"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_keyword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/string_category"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/categories"
        android:translationY="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/input_keyword"
        app:layout_constraintTop_toBottomOf="@+id/input_keyword" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/string_date_from"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_start_date"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_start_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:hint="YYYY-MM-DD"
        android:textColorHint="#FFFFFF"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime|date"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/string_to"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_end_date"
        app:layout_constraintEnd_toEndOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_end_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:hint="YYYY-MM-DD"
        android:textColorHint="#FFFFFF"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:boxBackgroundMode="filled"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/input_start_date"
        app:layout_constraintTop_toBottomOf="@+id/input_start_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime|date"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:textColor="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button_search"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_end_date"
        app:layout_constraintStart_toStartOf="@+id/input_end_date"
        app:layout_constraintTop_toBottomOf="@+id/input_end_date" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button_clear"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>